# django-scope

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
example_project/: settings.py
frontend/: tsconfig.tsbuildinfo
frontend/src/: App.vue  api.ts  router.ts  types.ts
frontend/src/assets/styles/: main.css
frontend/src/components/: AppHeader.vue  AppSidebar.vue  EntryTable.vue  LiveIndicator.vue  StatusBadge.vue
frontend/src/pages/: DashboardPage.vue  HealthPage.vue  StatsPage.vue
src/telescope/: __init__.py  apps.py  context.py  db_router.py  entry_type.py  filtering.py  models.py  recorder.py  redaction.py  serializers.py  settings.py  truncation.py  urls.py
src/telescope/consumers/: telescope_consumer.py
src/telescope/management/commands/: telescope_mcp.py
src/telescope/mcp/: server.py  tools.py
src/telescope/middleware/: __init__.py  telescope_middleware.py
src/telescope/migrations/: 0002_add_indexes.py  0003_entry_type_update.py
src/telescope/static/telescope/assets/: CodeBlock.vue_vue_type_script_setup_true_lang-CB1L_rCt.js  ConfirmDialog.vue_vue_type_style_index_0_lang-DysF7aVO.js  DashboardPage-DxDCh2Bj.js  DashboardPage-SIXdah0V.js  DurationBadge.vue_vue_type_script_setup_true_lang-Bobhd3bM.js  index.css  (+16 more)
src/telescope/views/: api.py
src/telescope/watchers/: __init__.py  base.py  cache_watcher.py  command_watcher.py  exception_watcher.py  log_watcher.py  model_watcher.py  query_watcher.py  request_watcher.py  storage_watcher.py  transaction_watcher.py
tests/: test_entry_type.py  test_n_plus_one.py
