[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-telescope"
version = "0.1.0"
description = "An elegant debug assistant for Django, inspired by Laravel Telescope"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "cosmic" }]
keywords = ["django", "debug", "telescope", "monitoring", "profiling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "django>=4.2",
    "channels>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/telescope"]

[tool.hatch.build.targets.sdist]
include = ["src/telescope/**", "LICENSE", "README.md"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 120
